Bug 369609 - shows only white and blue for trust levels
Summary: shows only white and blue for trust levels
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.17.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-01 14:41 UTC by tony den haan
Modified: 2017-07-11 16:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 17.08.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tony den haan 2016-10-01 14:41:36 UTC
It shows blue for ultimate trust only, white for all others. Shouldn't there be more colours?

Reproducible: Always
Comment 1 Rolf Eike Beer 2016-10-11 16:39:33 UTC
Works for me. Maybe your trustdb is empty, so your private key is the only trusted one?
Comment 2 tony den haan 2016-10-12 14:58:06 UTC
nope, as i said: they all remain white unless it set trust to ultimate. so they're there.
Comment 3 tony den haan 2016-10-13 06:52:15 UTC
ok, i fell for the "trust" vs "user trust", the interface is rather confusing there.
Comment 4 Rolf Eike Beer 2016-10-15 18:07:03 UTC
The trust and user trust things are GnuPG details that I can only show, but have no control over their functionality. I've written up something to explain how it works in the documentation: https://docs.kde.org/trunk5/en/kdeutils/kgpg/manage.html

I guess you have no keys in your keyring that are signed by your private key. This is why none of them are trusted. I suggest signing one of them, preferably using a local-only signature as it is for testing purposes. Then this key should become trusted, and show a different color. Afterwards the local signature can be deleted again.
Comment 5 Rolf Eike Beer 2016-11-05 16:19:50 UTC
So, is there actually an issue here?
Comment 6 tony den haan 2016-11-08 13:07:31 UTC
I find it quite confusing, signing a key is "Trust", and signing a key with "havent checked at all" gives green, no matter what "owner trust" level i set via key properties. I'd expect slightly different colour there :)
Maybe providing separate field/column might make things clearer?
Comment 7 Rolf Eike Beer 2017-07-11 16:05:36 UTC
I've done my best to give more information in the key model, but those are really 2 different values (the documentation tells how they influence each other).