show trust and owner trust strings as tooltips in key model

BUG:369609